[package]
name = "async-atomic"
version = "0.1.0"
edition = "2021"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]

description = "Atomics which can be subscribed to and asynchronously notify when updated"
documentation = "https://docs.rs/async-atomic"
homepage = "https://github.com/agerasev/async-atomic"
repository = "https://github.com/agerasev/async-atomic.git"
readme = "README.md"
keywords = ["async", "atomic"]
categories = ["asynchronous", "concurrency", "no-std"]
license = "MIT/Apache-2.0"

[features]
default = ["std", "fallback"]
std = ["atomic/std", "futures/std"]
fallback = ["atomic/fallback"]

[dependencies]
atomic = { version = "0.5.1", default-features = false }
futures = { version = "0.3.26", default-features = false }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
