[package]
name = "async-atomic"
version = "0.2.0"
edition = "2021"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]

description = "Atomics which can be subscribed to and asynchronously notify when updated"
documentation = "https://docs.rs/async-atomic"
homepage = "https://github.com/agerasev/async-atomic"
repository = "https://github.com/agerasev/async-atomic.git"
readme = "README.md"
keywords = ["async", "atomic"]
categories = ["asynchronous", "concurrency", "no-std"]
license = "MIT/Apache-2.0"

[dependencies]
atomig = { version = "0.4.2", default-features = false }
futures = { version = "0.3.26", default-features = false }
pin-project-lite = "0.2"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
